bk_ida/gccida/c3/announce_function
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/announce_function/src/diagnostic.c:1545:11: error: use of undeclared identifier 'off_690140'
verbatim( off_690140, v1); 
          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/announce_function/src/obj/diagnostic.o] Error 1
